@@ -1,3 +1,8 @@
+2016-01-18  Gary Benson  <gbenson@redhat.com>
+
+	* nat/linux-namespaces.c (do_fork): New function.
+	(linux_mntns_get_helper): Use the above.
+
 2016-01-17  Jonas Hahnfeld <Hahnfeld@itc.rwth-aachen.de>  (tiny change)
 
 	Pushed by Joel Brobecker  <brobecker@adacore.com>.
